# Espresso-Flow

./: CITATION.cff  LICENSE  LICENSE.txt  README.md  pyproject.toml
docs/demo_baseline/: fields.npz  summary.json  timeseries.csv
docs/demo_montecarlo/: mc_runs.csv  mc_summary.json
examples/: baseline_config.json  fast_flow_config.json
src/espresso_darcy_model/: __init__.py  cli.py  config.py  medium.py  plotting.py  random_fields.py  simulation.py  solver.py
tests/: test_medium.py  test_simulation.py
