[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "espresso-darcy-model"
version = "0.1.0"
description = "Reduced-order espresso extraction model with Darcy/Forchheimer flow and 2D heterogeneity."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Mark M. Bailey"}
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
espresso-darcy = "espresso_darcy_model.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
